add roles basic usage