@@ -3,6 +3,7 @@ package com.example.booklibraryv2.security.jwt;
 import com.auth0.jwt.interfaces.Claim;
 import com.auth0.jwt.interfaces.DecodedJWT;
 import com.example.booklibraryv2.security.models.userPrincipal.UserPrincipal;
+import java.util.Collections;
 import java.util.List;
 import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.stereotype.Component;
@@ -19,12 +20,10 @@ public class JwtToPrincipalConverter {
   }
 
   private List<SimpleGrantedAuthority> extractAuthoririesFromClaim(DecodedJWT decodedJwt) {
-    Claim claim = decodedJwt.getClaim("u");
+    Claim claim = decodedJwt.getClaim("a");
 
-    if (claim.isNull() || claim.isMissing()) {
-      return List.of();
-    }
-
-    return claim.asList(SimpleGrantedAuthority.class);
+    return (claim.isNull() || claim.isMissing())
+        ? Collections.emptyList()
+        : claim.asList(SimpleGrantedAuthority.class);
   }
 }
